# captain-officer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.json
bot/src/: Makefile  main.c
gencodecs/: discord_codecs.c
include/: args.h
scripts/: compile_concord.sh
src/: args.c  main.c
